--- a/pages/history/history.wxss
+++ b/pages/history/history.wxss
@@ -1,4 +1,4 @@
-/* history.wxss */
+/*history.wxss*/
 
 view.body {
   display: flex;
@@ -24,6 +24,16 @@ image.img {
   height: 50vh;
   background-color: #eee;
 
+}
+
+text.date {
+  width: 100vw;
+  font-weight: normal;
+  font-size: 10pt;
+  color: #888;
+  text-align: center;
+  margin-top: 28rpx;
+  margin-bottom: 12rpx;
 }
 
 text.more {
